[package]
name = "juliaup"
version = "1.18.8"
description = "Julia installer and version multiplexer"
repository = "https://github.com/julialang/juliaup"
license = "MIT"
keywords = ["julia"]
categories = ["command-line-utilities"]
edition = "2021"
default-run = "juliaup"
authors = ["David Anthoff <anthoff@berkeley.edu>"]
exclude = [
    ".github/**",
    ".vscode/**",
    ".wix/**",
    "deploy/**",
    "devdocs/**",
    "scripts/**",
    "download_bundled_julia.ps1",
]

[profile.release]
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "wrap_help"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
dirs = "6.0.0"
dunce = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0.18"
anyhow = "1.0.72"
tempfile = "3.12"
flate2 = "1.0"
tar = "0.4.39"
normpath = "1.3"
fs_extra = "1.3.0"
thiserror = "2.0"
indicatif = "0.17"
console = "0.15"
ctrlc = "3.4"
url = "2.4.0"
cli-table = "0.5.0"
itertools = "0.14.0"
cluFlock = "1.2.7"
chrono = { version = "0.4.26", features = ["serde"] }
human-panic = "2.0"
log = "0.4.25"
env_logger = "0.11"
dialoguer = "0.11.0"
shellexpand = "3.1.0"
env_proxy = "0.4.1"
bstr = "1.10"
indoc = "2.0.3"
is-terminal = "0.4"
path-absolutize = "3.1.0"
numeric-sort = "0.1.5"
regex = "1.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Console", "Win32_System_Threading", "Services_Store", "Foundation", "Foundation_Collections", "Web_Http", "Web_Http_Headers", "Storage_Streams", "Management_Deployment"] }

[target.'cfg(target_os = "macos")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls", "socks"] }

[target.'cfg(all(not(target_os = "macos"),not(windows)))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots", "socks"] }

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.29.0", features = ["process"] }

[build-dependencies]
anyhow = "1.0.72"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.103"
semver = "1.0.18"
built = "0.7.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
indoc = "2.0"
predicates = "3.1"

[features]
selfupdate = []
windowsstore = []
windowsappinstaller = []
dummy = []
binjuliainstaller = []
binjulialauncher = []
winpkgidentityext = []

[package.metadata.msix]
winstoremsix = { file = "deploy/msix/PackagingLayout.xml", variables = [
    {name = "FlatBundle", value="false"},
    {name = "PublisherDisplayName", value="JuliaHub, Inc."},
    {name = "IdentityPublisher", value = "CN=7FB784C5-4411-4067-914E-A7B06CC00FFC"}
] }
winappinstallermsix = { file = "deploy/msix/PackagingLayout.xml", variables = [
    {name = "FlatBundle", value="true"},
    {name = "PublisherDisplayName", value="JuliaHub, Inc."},
    {name = "IdentityPublisher", value = "CN=&quot;JuliaHub, Inc.&quot;, O=&quot;JuliaHub, Inc.&quot;, L=CAMBRIDGE, S=Massachusetts, C=US"}
] }

[package.metadata.winappinstaller]
winappinstaller = "deploy/winappinstaller/Julia.appinstaller"

[package.metadata.winres]

[[bin]]
name = "julia"
path = "src/bin/julialauncher.rs"

[[bin]]
name = "julialauncher"
path = "src/bin/julialauncher.rs"
required-features = ["binjulialauncher"]

[[bin]]
name = "juliaup"
path = "src/bin/juliaup.rs"

[[bin]]
name = "juliainstaller"
path = "src/bin/juliainstaller.rs"
required-features = ["binjuliainstaller"]
