[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "juliaup"
dynamic = [
    "version",
    "description",
    "project_url",
    "license",
    "keywords",
    "author",
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
bindings = "bin"
